[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pacer-marl"
version = "0.1.0"
description = "Partner-adaptive causal-role ensembles for Melting Pot"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24,<3"]

[project.optional-dependencies]
meltingpot = ["dm-meltingpot==2.4.0"]

[project.scripts]
pacer-marl = "pacer_marl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

